--- a/PersistHighlighter/PersistHighlighter.csproj
+++ b/PersistHighlighter/PersistHighlighter.csproj
@@ -10,7 +10,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{B944DAD0-940E-44B7-818D-698E90A5B5BC}</ProjectGuid>
+    <ProjectGuid>{C5CCEBB8-CED1-47AD-AB8E-9F9D07956A61}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PersistHighlighter</RootNamespace>
@@ -55,8 +55,8 @@
     <Compile Include="Classifier\StickyHighlightWordTag2.cs" />
     <Compile Include="Classifier\StickyHighlightWordTag3.cs" />
     <Compile Include="Classifier\StickyHighlightWordTagger.cs" />
-    <Compile Include="GuidList.cs" />
-    <Compile Include="PkgCmdIDList.cs" />
+    <Compile Include="Cmd\ClearHighlight.cs" />
+    <Compile Include="Cmd\ToggleHighlight.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PersistHighlighterPackage.cs" />
   </ItemGroup>
@@ -66,16 +66,28 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Design" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="16.0.202" ExcludeAssets="runtime" />
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.5.1032" />
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.4.1057" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="PersistHighlighter.png">
+    <VSCTCompile Include="Cmd\PersistHighlighterPackage.vsct">
+      <ResourceName>Menus.ctmenu</ResourceName>
+    </VSCTCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Cmd\Resources\ClearHighlight.png" />
+    <Content Include="Cmd\Resources\ToggleHighlight.png" />
+    <Content Include="icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
